--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.2.0",
     "sort-by": "^1.2.0"
   },
