--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
     "antd": "^5.24.1",
     "aos": "^2.3.4",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
@@ -19,7 +21,9 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
